Fixed a css jump

--- a/app/styles/contextronic.scss
+++ b/app/styles/contextronic.scss
@@ -91,5 +91,9 @@
 		&.on {
 			background-attachment: fixed!important;
 		}
+
+		&.bottom {
+			background-position: bottom left;
+		}
    }
 }
