--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7720,6 +7720,10 @@ td.visible-print {
 .wood .context.on {
   background-attachment: fixed!important;
 }
+/* line 95, contextronic.scss */
+.wood .context.bottom {
+  background-position: bottom left;
+}
 
 /* line 1, quote.scss */
 .quote {
